fix todos to overflow, now auto-fit the container

--- a/src/styles/mainContent.css
+++ b/src/styles/mainContent.css
@@ -1,3 +1,7 @@
+.main-content {
+  padding: 20px;
+}
+
 .delete-project {
   color: black;
   cursor: pointer;
@@ -11,6 +15,7 @@
   margin: 20px;
   display: grid;
   grid-template-rows: 20% 80%;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.8), 0px 1px 3px rgba(0, 0, 0, 0.5);
 }
 
 .task-header {
@@ -36,10 +41,10 @@
 /* HEADER OFF */
 
 .tasks {
-  margin-top: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  display: grid;
+  justify-items: center;
+  grid-template-rows: repeat(auto-fit, minmax(1px, 60px));
+  padding: 20px;
   gap: 20px;
 }
 
@@ -99,10 +104,7 @@
 }
 
 .plus-btn {
-  position: absolute;
-  right: 0;
-  bottom: 0;
-  transform: scale(1);
+  margin-left: 20px;
 }
 
 .plus-btn img {
